[package]
name = "ark-pcs-bench-templates"
version = "0.5.0"
authors = ["arkworks contributors"]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
repository = "https://github.com/arkworks-rs/poly-commit"
documentation = "https://docs.rs/ark-poly-commit/"
keywords = ["cryptography", "commitments", "elliptic-curves", "pairing"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-poly-commit = { path = "../poly-commit", default-features = false }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-crypto-primitives = { workspace = true, features = ["sponge", "merkle_tree"] }
ark-std.workspace = true
rand_chacha.workspace = true

criterion = { version = "0.5", default-features = false }
paste = "1.0"
